# Trackpad2040

./: CMakeLists.txt  hello_tau.c  library.c  library.h
Knowledge/: Configuring library.md  Improving Pico's ADC.md  Iterations history and findings.md  MT sensor design.md  RX line.md  ReadMe.md  Research.md  Trackpad2040.md
Knowledge/Tricks/: ADC_Vref.md  Latency data.md  Learnings and considerations.md  Microsleeps.md  RX line.md  Superfast scanning.md
PCB/: Multitouch_alaMTK.json  PCB_Multitouch_alaMTK.json  PCB_Trackpad.json  PCB_Trackpad2040.json  PCB_controller.json  PCB_sensor.json  SensorMatrix_16x8_Step9mm.dxf  info
PCB/Fab/: BOM_Trackpad2040.csv  BOM_Trackpad2040_controller.csv  PickAndPlace_PCB_controller.csv  PickAndPlace_Trackpad2040_controller.csv
